# BNN

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
bnn/: CMakeLists.txt
bnn/autodiff/: forward.hpp  forward_impl.cpp  graph.hpp  graph_impl.cpp  reverse.hpp  reverse_impl.cpp
bnn/core/: tensor.hpp  tensor_impl.cpp  tensor_ops.hpp  tensor_ops_impl.cpp
bnn/cuda/core/: tensor.hpp  tensor_impl.cu  tensor_impl.hpp
bnn/cuda/utils/: cuda_wrappers.hpp  cuda_wrappers_impl.cu  cuda_wrappers_impl.hpp
bnn/io/: input.hpp  input_impl.cpp
bnn/nn/: activations.hpp  layers.hpp
bnn/operations/: operations.hpp  operations_impl.cpp  operators.hpp  operators_impl.cpp
bnn/templates/: core_tensor.hpp  operations_operations.hpp  operations_operators.hpp
bnn/templates/autodiff/: forward.hpp  graph.hpp  reverse.hpp
bnn/templates/core/: tensor_ops.hpp
bnn/templates/cuda/core/: tensor.hpp
bnn/templates/io/: input.hpp
bnn/templates/operations/: operations.hpp  operators.hpp
bnn/tests/: test_autodiff.cpp  test_core.cpp  test_cuda_core.cpp  test_io.cpp  test_operations.cpp
bnn/utils/: cuda_wrappers.hpp  cuda_wrappers_impl.hpp  utils.hpp  utils_impl.cpp
